--- a/Project.toml
+++ b/Project.toml
@@ -4,12 +4,22 @@ authors = ["vcantarella <vcantarella@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
 [deps]
+DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+NonlinearSolve = "8913a72c-1f9b-4ce2-8d82-65094dcecaec"
+PRIMA = "0a7d04aa-8ac2-47b3-b7a7-9dbd6ad661ed"
 PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
+SciMLSensitivity = "1ed8b502-d754-442c-8d5d-10ac956f44a1"
 
 [compat]
+DifferentialEquations = "7.15.0"
+ForwardDiff = "0.10.38"
 LinearAlgebra = "1.11.0"
+NonlinearSolve = "3.15.1"
+PRIMA = "0.2.2"
 PythonCall = "0.9.23"
+SciMLSensitivity = "7.71.2"
 julia = "1.6.7"
 
 [extras]
