--- a/Project.toml
+++ b/Project.toml
@@ -9,8 +9,10 @@ DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NonlinearSolve = "8913a72c-1f9b-4ce2-8d82-65094dcecaec"
+NonlinearSolveBase = "be0214bd-f91f-a760-ac4e-3421ce2b2da0"
 PRIMA = "0a7d04aa-8ac2-47b3-b7a7-9dbd6ad661ed"
 PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
+Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 SciMLSensitivity = "1ed8b502-d754-442c-8d5d-10ac956f44a1"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 
@@ -20,8 +22,10 @@ DifferentialEquations = "7.15.0"
 ForwardDiff = "0.10.38"
 LinearAlgebra = "1.11.0"
 NonlinearSolve = "3.15.1"
+NonlinearSolveBase = "1.3.3"
 PRIMA = "0.2.2"
 PythonCall = "0.9.23"
+Roots = "2.2.2"
 SciMLSensitivity = "7.71.2"
 StatsPlots = "0.15.7"
 julia = "1.6.7"
