--- a/Project.toml
+++ b/Project.toml
@@ -32,7 +32,7 @@ CondaPkg = "0.2.24"
 DifferentialEquations = "7.15.0"
 ForwardDiff = "0.10.38"
 JSOSolvers = "0.12.1"
-LinearAlgebra = "1.11.0"
+LinearAlgebra = "1.11.0, 1.10"
 NLPModels = "0.21.3"
 NonlinearSolve = "3.15.1"
 NonlinearSolveBase = "1.3.3"
