--- a/Project.toml
+++ b/Project.toml
@@ -4,48 +4,26 @@ authors = ["vcantarella <vcantarella@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
 [deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+PRIMA = "0a7d04aa-8ac2-47b3-b7a7-9dbd6ad661ed"
+Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
+
+[compat]
+PRIMA = "0.2, 0.3, 0.4"
+Roots = "2"
+julia = "1.10, 1.11"
+
+[extras]
 ADNLPModels = "54578032-b7ea-4c30-94aa-7cbd1cce6c9a"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CUTEst = "1b53aba6-35b6-5f92-a507-53c67d53f819"
-CaNNOLeS = "5a1c9e79-9c58-5ec0-afc4-3298fdea2875"
-CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 JSOSolvers = "10dff2fc-5484-5881-a0e0-c90441020f8a"
-LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NLPModels = "a4795742-8479-5a88-8948-cc11e1c8c1a6"
 NonlinearSolve = "8913a72c-1f9b-4ce2-8d82-65094dcecaec"
-NonlinearSolveBase = "be0214bd-f91f-a760-ac4e-3421ce2b2da0"
-PRIMA = "0a7d04aa-8ac2-47b3-b7a7-9dbd6ad661ed"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
-Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
-SciMLSensitivity = "1ed8b502-d754-442c-8d5d-10ac956f44a1"
-StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
-
-[compat]
-ADNLPModels = "0.8.10"
-BenchmarkTools = "1.6.0"
-CUTEst = "1.0.3"
-CaNNOLeS = "0.7.7"
-CondaPkg = "0.2.24"
-DifferentialEquations = "7.15.0"
-ForwardDiff = "0.10.38"
-JSOSolvers = "0.12.1"
-LinearAlgebra = "1.11.0, 1.10"
-NLPModels = "0.21.3"
-NonlinearSolve = "3.15.1"
-NonlinearSolveBase = "1.3.3"
-PRIMA = "0.2.2"
-Plots = "1.40.9"
-PythonCall = "0.9.23"
-Roots = "2.2.2"
-SciMLSensitivity = "7.71.2"
-StatsPlots = "0.15.7"
-julia = "1.6.7"
-
-[extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Test", "ADNLPModels", "BenchmarkTools", "CUTEst", "DifferentialEquations", "ForwardDiff", "JSOSolvers", "NLPModels", "NonlinearSolve", "PythonCall"]
