--- a/test/Project.toml
+++ b/test/Project.toml
@@ -3,10 +3,12 @@ CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CUTEst = "1b53aba6-35b6-5f92-a507-53c67d53f819"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Enlsip = "d5306a6b-d590-428d-a53a-eb3bb2d36f2d"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 JSOSolvers = "10dff2fc-5484-5881-a0e0-c90441020f8a"
 LeastSquaresOptim = "0fc2ff8b-aaa3-5acd-a817-1944a5e08891"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+NL2sol = "2fe4ca64-33e0-11e8-0d29-fd842786b1cb"
 NLPModels = "a4795742-8479-5a88-8948-cc11e1c8c1a6"
 NLSProblems = "7cde8186-f29c-533a-9367-b4054c592979"
 NonlinearSolve = "8913a72c-1f9b-4ce2-8d82-65094dcecaec"
