--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CUTEst = "1b53aba6-35b6-5f92-a507-53c67d53f819"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
