--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,8 +25,8 @@ jobs:
       matrix:
         version:
           - '1.12'  # Latest stable
-          - '1.11'  # LTS
-          - '~1.13.0-0'  # Pre-release
+          - '1.10'  # LTS
+          # - '~1.13.0-0'  # Pre-release
         os:
           - ubuntu-latest
           - windows-latest
@@ -41,11 +41,13 @@ jobs:
         exclude:
           # Reduce Windows and macOS pre-release testing
           - os: windows-latest
-            version: '~1.13.0-0'
-          - os: macos-latest
-            version: '~1.13.0-0'
+            version: '1.12'
     steps:
       - uses: actions/checkout@v4
+      - name: Install Fortran compiler (macOS)
+        if: runner.os == 'macOS'
+        run: |
+          brew install gcc
       - uses: julia-actions/setup-julia@v2
         with:
           version: ${{ matrix.version }}
@@ -70,6 +72,10 @@ jobs:
       id-token: write # needed for pages deployment
     steps:
       - uses: actions/checkout@v4
+      - name: Install Fortran compiler (macOS)
+        if: runner.os == 'macOS'
+        run: |
+          brew install gcc
       - uses: julia-actions/setup-julia@v2
         with:
           version: '1.12'
@@ -98,6 +104,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Install Fortran compiler (macOS)
+        if: runner.os == 'macOS'
+        run: |
+          brew install gcc
       - uses: julia-actions/setup-julia@v2
         with:
           version: '1.12'
@@ -113,6 +123,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Install Fortran compiler (macOS)
+        if: runner.os == 'macOS'
+        run: |
+          brew install gcc
       - uses: julia-actions/setup-julia@v2
         with:
           version: '1.12'
@@ -133,6 +147,10 @@ jobs:
     if: github.event_name == 'pull_request'
     steps:
       - uses: actions/checkout@v4
+      - name: Install Fortran compiler (macOS)
+        if: runner.os == 'macOS'
+        run: |
+          brew install gcc
       - uses: julia-actions/setup-julia@v2
         with:
           version: '1.12'
