Refactor CI workflow by removing Fortran steps
Removed Fortran compiler installation steps for macOS, Linux, and Windows from CI workflow. Simplified testing steps by removing platform-specific PythonCall build and test commands.
not sure that actually helped.

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,38 +29,10 @@ jobs:
           # - '~1.13.0-0'  # Pre-release
         os:
           - ubuntu-latest
-          - windows-latest
-          - macos-latest
         arch:
           - x64
-        include:
-          # Test on Apple Silicon
-          - version: '1.12'
-            os: macos-latest
-            arch: aarch64
-        exclude:
-          # Reduce Windows and macOS pre-release testing
-          - os: windows-latest
-            version: '1.12'
     steps:
       - uses: actions/checkout@v5
-      - name: Install Fortran compiler (macOS)
-        if: runner.os == 'macOS'
-        run: |
-          brew install gcc
-      - name: Install Fortran compiler (Linux)
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gfortran
-      - name: Install Fortran compiler (Windows)
-        if: runner.os == 'Windows'
-        uses: msys2/setup-msys2@v2
-        with:
-          msystem: MINGW64
-          update: true
-          install: >-
-            mingw-w64-x86_64-gcc-fortran
       - uses: julia-actions/setup-julia@v2
         with:
           version: ${{ matrix.version }}
@@ -79,34 +51,13 @@ jobs:
         run: |
           julia --project=test -e 'using Pkg; Pkg.instantiate()'
           julia --project=test -e 'using CondaPkg; CondaPkg.add("scipy")'
-
-      # On Unix-like runners use the repo-local CondaPkg python and rebuild PythonCall
-      - name: Build PythonCall and run tests (unix)
-        if: runner.os != 'Windows'
-        run: |
-          PY="${{ github.workspace }}/test/.CondaPkg/.pixi/envs/default/bin/python"
-          echo "Using python: $PY"
-          export PYTHON="$PY"
-          julia --project=test -e 'using Pkg; Pkg.build("PythonCall")'
-          julia --project=test -e 'using Pkg; Pkg.test(path=pwd())'
-
-      # Windows runner: use the Scripts/python.exe path
-      - name: Build PythonCall and run tests (windows)
-        if: runner.os == 'Windows'
-        shell: pwsh
-        run: |
-          $PY = "${{ github.workspace }}\test\.CondaPkg\.pixi\envs\default\Scripts\python.exe"
-          Write-Host "Using python: $PY"
-          $env:PYTHON = $PY
-          julia --project=test -e "using Pkg; Pkg.build(\"PythonCall\"); Pkg.test(path=pwd())"
-
+      - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v5
         with:
           files: lcov.info
           token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: false
-
   docs:
     name: Documentation
     runs-on: ubuntu-latest
@@ -149,10 +100,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
-      - name: Install Fortran compiler (macOS)
-        if: runner.os == 'macOS'
-        run: |
-          brew install gcc
       - uses: julia-actions/setup-julia@v2
         with:
           version: '1.12'
