--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -45,12 +45,16 @@ jobs:
       - uses: julia-actions/cache@v2
       - uses: julia-actions/julia-buildpkg@v1
 
-      # Prepare test project and ensure SciPy is installed into the repository-local
-      # CondaPkg environment so PythonCall can reliably import it during Pkg.test.
-      - name: Instantiate test project and install SciPy
+      # Prepare test project and ensure SciPy is installed via script
+      - name: Setup Python
+        run: |
+          chmod +x scripts/setup_python.sh
+          ./scripts/setup_python.sh
+          echo "JULIA_PYTHONCALL_EXE=$GITHUB_WORKSPACE/venv/bin/python" >> $GITHUB_ENV
+
+      - name: Instantiate test project
         run: |
           julia --project=test -e 'using Pkg; Pkg.instantiate()'
-          julia --project=test -e 'using CondaPkg; CondaPkg.add("scipy")'
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v5
