--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -52,9 +52,9 @@ jobs:
           ./scripts/setup_python.sh
           echo "JULIA_PYTHONCALL_EXE=$GITHUB_WORKSPACE/venv/bin/python" >> $GITHUB_ENV
 
-      - name: Instantiate test project
-        run: |
-          julia --project=test -e 'using Pkg; Pkg.instantiate()'
+      # - name: Instantiate test project
+      #   run: |
+      #     julia --project=test -e 'using Pkg; Pkg.instantiate()'
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v5
